# ivlam

./: .gitignore  README.md  example.ipynb  meson.build  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_publish_wheels.yml  publish.yml
example/: ivLam_example.ipynb  temp.ipynb
src/: __init__.py  fib.pyf  ivlam.py  ivlam.pyf  meson.build
src/ivlam/: .f2py_f2cmap  ivLamRuntimeV2p41_738416p65617.f90  ivLamV2p41.f90
